production_tf/main.tf
provider "aws" {
  region = "us-east-1"
}

# Variable Innstance pre-prod
#====================================================
variable "ec2_type_preprod" {
  description = "le type d'instance souhaité"
  type        = string
  default     = "t3.2xlarge"
}

variable "counterInstance_preprod" {
  description = "Nombre d'instance a creer"
  #type = string
  default = 3
}

# Variable autorisation des ip (Innstance pre-prod)
variable "admin-ips" {
  description = "les ip's des admins"
  default     = ["192.168.1.0", "77.207.199.0"]
}

variable "mon_ip" {
  description = "Les adresses acceptéés"
  type        = string
  default     = "176.172.132.0"
}


# Cluster rke2 instances
# ======================================

# 3 Masters
resource "aws_instance" "masters" {

  count         = var.counterInstance_preprod # creation multiple des instances
  ami           = "ami-04b4f1a9cf54c11d0"
  instance_type = var.ec2_type_preprod
  key_name      = aws_key_pair.vockey.key_name
  #subnet_id              = "subnet-0c90a1be41664ad8e" #  sous-réseau appartenant à vpc-013d1e316d56835ef
  vpc_security_group_ids = [aws_security_group.admin_ssh_production.id]


  lifecycle {
    create_before_destroy = true
  }

  depends_on = [aws_security_group.admin_ssh_production, aws_key_pair.vockey] # Assure l'ordre de création

  tags = {
    Name = "master-tf-${count.index}"
  }

}


# morker1
resource "aws_instance" "worker1" {

  #count         = var.counterInstance_preprod # creation multiple des instances
  ami           = "ami-04b4f1a9cf54c11d0"
  instance_type = "t3.2xlarge" #var.ec2_type_preprod
  key_name      = aws_key_pair.vockey.key_name
  #subnet_id              = "subnet-0c90a1be41664ad8e" #  sous-réseau appartenant à vpc-013d1e316d56835ef
  vpc_security_group_ids = [aws_security_group.admin_ssh_production.id]


  lifecycle {
    create_before_destroy = true
  }

  depends_on = [aws_security_group.admin_ssh_production, aws_key_pair.vockey] # Assure l'ordre de création

  tags = {
    Name = "worker1-tf"
  }

}


#création de la clé SSH dans

# Ajout d'un random_string pour générer un nom unique :
#resource "random_string" "suffix" {
#  length  = 4
#  special = false
#  upper   = false
#}

# tls_private_key → Génère une clé privée.
resource "tls_private_key" "vockey" {
  algorithm = "RSA"
  rsa_bits  = 2048
}
#aws_key_pair → Crée la clé publique sur AWS.
resource "aws_key_pair" "vockey" {
  key_name   = "vockey"
  public_key = tls_private_key.vockey.public_key_openssh

  lifecycle {
    ignore_changes = [key_name] # Ignore si la clé existe déjà
  }
}
# local_file → Stocke la clé privée (vockey.pem) localement.
resource "local_file" "vockey_pem" {
  filename        = "${path.module}/vockey.pem"
  content         = tls_private_key.vockey.private_key_pem
  file_permission = "0600"
}

output "instance_info_prod_master" {
  value = {
    master_prod_public_ip = aws_instance.masters[*].public_ip
  }
}
output "instance_info_prod_worker" {
  value = {
    worker_prod_public_ip = aws_instance.worker1[*].public_ip
  }
}


output "ssh_key_name" {
  value = aws_key_pair.vockey.key_name
}

output "ssh_private_key_filename" {
  value = local_file.vockey_pem.filename
}


# exportation d'IP masters
resource "null_resource" "generate_ansible_inventory-masters" {
  depends_on = [aws_instance.masters]

  provisioner "local-exec" {
    command = <<EOT
      mkdir -p ../ansible_production
      echo "[masters]" >> ../ansible_production/inventory
      ${join("\n", formatlist("echo %s ansible_user=ubuntu ansible_ssh_private_key_file=../production_tf/vockey.pem ansible_ssh_extra_args='\"-o StrictHostKeyChecking=no\"' >> ../ansible_production/inventory", aws_instance.masters[*].public_ip))}
    EOT
  }
}

# exportation d'IP worker1
resource "null_resource" "generate_ansible_inventory_w1" {
  depends_on = [aws_instance.worker1]

  provisioner "local-exec" {
    command = <<EOT
      mkdir -p ../ansible_production
      echo "[worker1]" >> ../ansible_production/inventory
      ${join("\n", formatlist("echo %s ansible_user=ubuntu ansible_ssh_private_key_file=../production_tf/vockey.pem ansible_ssh_extra_args='\"-o StrictHostKeyChecking=no\"' >> ../ansible_production/inventory", aws_instance.worker1[*].public_ip))}
    EOT
  }
}


#_____________Creation de security group___________
# =================================================.

# Création du groupe de sécurité s'il n'existe pas déjà
resource "aws_security_group" "admin_ssh_production" {
  name = "admin_ssh_production"
  #description = "groupe-de sécurité pour accès ssh"
  vpc_id = "vpc-09c4b38653df63f28" # The chosen vpc

  lifecycle {
    ignore_changes = [name] # Ignore si le groupe existe déjà
  }

  tags = {
    Name = "admin_ssh_production"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh_in_myip" {
  security_group_id = aws_security_group.admin_ssh_production.id
  cidr_ipv4         = "${var.mon_ip}/24"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

# temporairement pour le workflow
#resource "aws_vpc_security_group_ingress_rule" "allow_ssh_in_myip" {
#  security_group_id = aws_security_group.admin_ssh_preprod.id
#  cidr_ipv4         = "0.0.0.0/0"
#  from_port         = 22
#  ip_protocol       = "tcp"
#  to_port           = 22
#}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh_in" {
  for_each          = toset(var.admin-ips)
  security_group_id = aws_security_group.admin_ssh_production.id
  cidr_ipv4         = "${each.value}/24"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_egress_rule" "allow_ssh_out" {
  security_group_id = aws_security_group.admin_ssh_production.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "allow_http_in" {
  security_group_id = aws_security_group.admin_ssh_production.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "allow_https_in" {
  security_group_id = aws_security_group.admin_ssh_production.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}
